Add about section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <span class="pass__city">Astana </span>Pass
                 </h1>
               </div>
-						<a href="#" class="details details__link--black">Подробнее</a>
+              <a href="#" class="details details__link--black">Подробнее</a>
               <p class="pass__text">
                 Единая карта туриста, которая включает в себя лучшие
                 достопримечательности и экскурсии города
@@ -117,7 +117,7 @@
                   <span class="pass__city">Astana</span> Museum Pass
                 </h1>
               </div>
-						<a href="#" class="details details__link--black">Подробнее</a>
+              <a href="#" class="details details__link--black">Подробнее</a>
               <p class="pass__text">
                 Официальная музейная карта туриста, которая включает в себя
                 посещение лучших культурных объектов города
@@ -149,9 +149,9 @@
                 </h1>
               </div>
 
-							<a href="#" class="details details__link--black">Подробнее</a>
-             
-							<p class="pass__text">
+              <a href="#" class="details details__link--black">Подробнее</a>
+
+              <p class="pass__text">
                 Эксклюзивная карта CityPass, которая позволяет посещать
                 Байтерек, Экспо и Нур-Алем по самой низкой цене.
               </p>
@@ -171,10 +171,42 @@
         </div>
       </section>
 
-      <section class="section question">
-        <div class="question__item"></div>
-        <div class="question__item"></div>
-        <div class="question__item"></div>
+      <section class="section about">
+        <div class="about__item">
+          <img src="./assets/icons/card.png" alt="" class="about__image" />
+          <div class="about__content">
+            <h2 class="about__heading">ЧТО ТАКОЕ city Pass</h2>
+            <p class="about__text">
+              Свободный вход в лучшие достопримечательности, двухэтажный автобус
+              и на речную прогулку на катере. На выбор вы можете приобрести
+              пластиковую карту или онлайн карта с QR кодом.
+            </p>
+          </div>
+        </div>
+
+        <div class="about__item">
+          <img src="./assets/icons/location_tip.png" alt="" class="about__image" />
+          <div class="about__content">
+            <h2 class="about__heading">Как это работает</h2>
+            <p class="about__text">
+              Отсчет времени, в течение которого работает CityPass, начнется с
+              момента первого прохода в музей, достопримечательность, автобус
+              или на борт корабля.
+            </p>
+          </div>
+        </div>
+
+        <div class="about__item">
+          <img src="./assets/icons/map.png" alt="" class="about__image" />
+          <div class="about__content">
+            <h2 class="about__heading">Для чего</h2>
+            <p class="about__text">
+              Все самое интересное в одном CityPass. Удобно! Комфортно!
+              Экономно! Это дешевле, чем покупать билеты отдельно. С выгодой
+              более 10 000 тенге.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section></section>
