Add popular section

--- a/index.html
+++ b/index.html
@@ -209,7 +209,41 @@
         </div>
       </section>
 
-      <section></section>
+      <section class="section popular">
+				<div class="popular__heading">
+					<h2 class="popular__header">Популярное</h2>
+					<p class="popular__sub-header">Мы сделали для вас подборку «Must visit places». Вы просто обязаны увидеть это!</p>
+				</div>
+				<div class="popular__collection">
+					<div class="popular__item">
+						<div>
+							<img src="./assets/images/popular_1.png" alt="red bus" class="popular__image">
+						</div>
+						<h3 class="popular__item-title">Экскурсия на двухэтажном автобусе Red Bus</h3>
+					</div>
+
+					<div class="popular__item">
+						<div class="popular-action">
+							<img src="./assets/images/popular_2.png" alt="Water Walk" class="popular__image">
+						</div>
+						<h3>Водные прогулки на теплоходах по реке Ишим</h3>
+					</div>
+					
+					<div class="popular__item">
+						<div class="popular__action">
+							<img src="./assets/images/popular_3.png" alt="nur-alem" class="popular__image">
+						</div>
+						<h3 class="popular__item-title">Музей энергии будущего «Нур-Алем» (ЭКСПО)</h3>
+					</div>
+					
+					<div class="popular__item">
+						<div class="popular__action">
+							<img src="./assets/images/popular_4.png" alt="jungle" class="popular__image">
+						</div>
+						<h3 class="popular__item-title">Театр аниматрониксов «Джунгли»</h3>
+					</div>
+				</div>
+			</section>
       <section></section>
       <section></section>
       <section></section>
