--- a/index.html
+++ b/index.html
@@ -59,18 +59,47 @@
       </div>
     </header>
     <main class="section section__main">
-      <!-- <section class="section main__banner">
-        <div class="slider__container">
-            <div class="slider__item">
-                <img src="./assets/images/main_slider_1.png" alt="Slider item">
-            </div>
-            <div class="slider__item">
-                <img src="./assets/images/main_slider_2.jpg" alt="Slider item">
-            </div>
-        </div>  
-        <button class="slider__button prev-el">&lt</button>
-        <button class="slider__button next-el ">&gt</button>
-      </section> -->
+      <section class="section slider--banner">
+        <div class="slider">
+					<div class="slider__track">
+						<div class="slider__item">
+							<img
+								class="slider__image"
+								src="./assets/images/main_slider_1.png"
+								alt="Slider item"
+							/>
+						</div>
+						<div class="slider__item">
+							<img
+								class="slider__image"
+								src="./assets/images/main_slider_2.jpg"
+								alt="Slider item"
+							/>
+							<div class="slider__content">
+								<h1 class="slider__title">
+									Astana Pass - ключ к достопримечательностям города
+								</h1>
+								<p class="slider__text">
+									Это карта гостя, которая открывает город в новых красках, делая
+									город еще более привлекательным для посетителей. Свободный вход
+									в достопримечательности и музеи, а также возможность посетить
+									интересные городские и загородные экскурсии.
+								</p>
+									<a href="#" class="visit visit--black"
+										>Хочу посетить</a>
+							</div>
+						</div>
+					</div>
+					<!-- Кнопки навигации -->
+					<button class="slider__nav slider__nav--prev" type="button">
+						&lt;
+					</button>
+					<button class="slider__nav slider__nav--next" type="button">
+						&gt;
+					</button>
+        </div>
+
+      </section>
       <section class="section pass">
         <div class="pass__container">
           <div class="pass__item">
@@ -185,7 +214,11 @@
         </div>
 
         <div class="about__item">
-          <img src="./assets/icons/location_tip.png" alt="" class="about__image" />
+          <img
+            src="./assets/icons/location_tip.png"
+            alt=""
+            class="about__image"
+          />
           <div class="about__content">
             <h2 class="about__heading">Как это работает</h2>
             <p class="about__text">
@@ -210,45 +243,69 @@
       </section>
 
       <section class="section popular">
-				<div class="popular__heading">
-					<h2 class="popular__header">Популярное</h2>
-					<p class="popular__sub-header">Мы сделали для вас подборку «Must visit places». Вы просто обязаны увидеть это!</p>
-				</div>
-				<div class="popular__collection">
-					<div class="popular__item">
-						<div>
-							<img src="./assets/images/popular_1.png" alt="red bus" class="popular__image">
-						</div>
-						<h3 class="popular__item-title">Экскурсия на двухэтажном автобусе Red Bus</h3>
-					</div>
+        <div class="popular__heading">
+          <h2 class="popular__header">Популярное</h2>
+          <p class="popular__sub-header">
+            Мы сделали для вас подборку «Must visit places». Вы просто обязаны
+            увидеть это!
+          </p>
+        </div>
+        <div class="popular__collection">
+          <div class="popular__item">
+            <div>
+              <img
+                src="./assets/images/popular_1.png"
+                alt="red bus"
+                class="popular__image"
+              />
+            </div>
+            <h3 class="popular__item-title">
+              Экскурсия на двухэтажном автобусе Red Bus
+            </h3>
+          </div>
 
-					<div class="popular__item">
-						<div class="popular-action">
-							<img src="./assets/images/popular_2.png" alt="Water Walk" class="popular__image">
-						</div>
-						<h3>Водные прогулки на теплоходах по реке Ишим</h3>
-					</div>
-					
-					<div class="popular__item">
-						<div class="popular__action">
-							<img src="./assets/images/popular_3.png" alt="nur-alem" class="popular__image">
-						</div>
-						<h3 class="popular__item-title">Музей энергии будущего «Нур-Алем» (ЭКСПО)</h3>
-					</div>
-					
-					<div class="popular__item">
-						<div class="popular__action">
-							<img src="./assets/images/popular_4.png" alt="jungle" class="popular__image">
-						</div>
-						<h3 class="popular__item-title">Театр аниматрониксов «Джунгли»</h3>
-					</div>
-				</div>
-			</section>
-      <section></section>
+          <div class="popular__item">
+            <div class="popular-action">
+              <img
+                src="./assets/images/popular_2.png"
+                alt="Water Walk"
+                class="popular__image"
+              />
+            </div>
+            <h3>Водные прогулки на теплоходах по реке Ишим</h3>
+          </div>
+
+          <div class="popular__item">
+            <div class="popular__action">
+              <img
+                src="./assets/images/popular_3.png"
+                alt="nur-alem"
+                class="popular__image"
+              />
+            </div>
+            <h3 class="popular__item-title">
+              Музей энергии будущего «Нур-Алем» (ЭКСПО)
+            </h3>
+          </div>
+
+          <div class="popular__item">
+            <div class="popular__action">
+              <img
+                src="./assets/images/popular_4.png"
+                alt="jungle"
+                class="popular__image"
+              />
+            </div>
+            <h3 class="popular__item-title">Театр аниматрониксов «Джунгли»</h3>
+          </div>
+        </div>
+      </section>
+      <section class=""></section>
       <section></section>
       <section></section>
       <section></section>
     </main>
     <footer></footer>
+    <script src="./js/main.js"></script>
   </body>
 </html>
