Add magazine slider, change slider logic

--- a/index.html
+++ b/index.html
@@ -61,44 +61,43 @@
     <main class="section section__main">
       <section class="section slider--banner">
         <div class="slider">
-					<div class="slider__track">
-						<div class="slider__item">
-							<img
-								class="slider__image"
-								src="./assets/images/main_slider_1.png"
-								alt="Slider item"
-							/>
-						</div>
-						<div class="slider__item">
-							<img
-								class="slider__image"
-								src="./assets/images/main_slider_2.jpg"
-								alt="Slider item"
-							/>
-							<div class="slider__content">
-								<h1 class="slider__title">
-									Astana Pass - ключ к достопримечательностям города
-								</h1>
-								<p class="slider__text">
-									Это карта гостя, которая открывает город в новых красках, делая
-									город еще более привлекательным для посетителей. Свободный вход
-									в достопримечательности и музеи, а также возможность посетить
-									интересные городские и загородные экскурсии.
-								</p>
-									<a href="#" class="visit visit--black"
-										>Хочу посетить</a>
-							</div>
-						</div>
-					</div>
-					<!-- Кнопки навигации -->
-					<button class="slider__nav slider__nav--prev" type="button">
-						&lt;
-					</button>
-					<button class="slider__nav slider__nav--next" type="button">
-						&gt;
-					</button>
+          <div class="slider__track">
+            <div class="slider__item">
+              <img
+                class="slider__image"
+                src="./assets/images/main_slider_1.png"
+                alt="Slider item"
+              />
+            </div>
+            <div class="slider__item">
+              <img
+                class="slider__image"
+                src="./assets/images/main_slider_2.jpg"
+                alt="Slider item"
+              />
+              <div class="slider__content">
+                <h1 class="slider__title">
+                  Astana Pass - ключ к достопримечательностям города
+                </h1>
+                <p class="slider__text">
+                  Это карта гостя, которая открывает город в новых красках,
+                  делая город еще более привлекательным для посетителей.
+                  Свободный вход в достопримечательности и музеи, а также
+                  возможность посетить интересные городские и загородные
+                  экскурсии.
+                </p>
+                <a href="#" class="visit visit--black">Хочу посетить</a>
+              </div>
+            </div>
+          </div>
+          <!-- Кнопки навигации -->
+          <button class="slider__nav slider__nav--prev" type="button">
+            &lt;
+          </button>
+          <button class="slider__nav slider__nav--next" type="button">
+            &gt;
+          </button>
         </div>
-
       </section>
       <section class="section pass">
         <div class="pass__container">
@@ -300,7 +299,72 @@
           </div>
         </div>
       </section>
-      <section class=""></section>
+      <section class="section ">
+				<div class="magazine">
+					<div class="magazine__heading">
+						<div class="magazine__typography">
+							<h1 class="magazine__header">ЖУРНАЛ</h1>
+							<p class="magazine__text">В этом разделе вы можете прочесть много интересного о Казахстане: о достопримечательностях и красивых пейзажах</p>
+						</div>
+						<a href="#" class="see-all-link">Смотреть всё</a>
+					</div>
+					<div class="slider slider--multi slider--finite">
+						<div class="slider__track">
+							<div class="slider__item slider__item--small">
+									<div class="article">
+										<img src="./assets/images/magazine_1.png" alt="Dubai" class="article__image" />
+										<div class="article__content">
+											<span class="article__date">16.02.2023</span>
+											<h3 class="article__title">Назван топ-10 направлений для туризма по версии TripAdvisor</h3>
+											<p class="article__text">Сайт путешествий TripAdvisor составил рейтинг Travellers’ Choice Awards (“Выбор туристов”), в котором собрал наиболее ...</p>
+										</div>
+										<a href="#" class="details details__link--black">Подробнее</a>
+									</div>
+							</div>
+							<div class="slider__item slider__item--small">
+									<div class="article">
+										<img src="./assets/images/magazine_2.png" alt="hospital place" class="article__image" />
+										<div class="article__content">
+											<span class="article__date">16.02.2023</span>
+											<h3 class="article__title">Названы самые гостеприимные места планеты</h3>
+											<p class="article__text">В путешествиях важны не только новые впечатления, но и комфортные условия для восстановления после дня...</p>
+										</div>
+									<a href="#" class="details details__link--black">Подробнее</a>
+								</div>
+							</div>
+							<div class="slider__item slider__item--small">
+									<div class="article">
+										<img src="./assets/images/magazine_3.png" alt="iceberg" class="article__image" />
+										<div class="article__content">
+											<span class="article__date">16.02.2023</span>
+											<h3 class="article__title">«Удивительный айсберг». В Алматинской области «снова появился «ледяной вулкан»</h3>
+											<p class="article__text">Казахстанцы делятся новыми красивыми фотографиями из села Кеген Алматинской области. Место славится...</p>
+										</div>
+									<a href="#" class="details details__link--black">Подробнее</a>
+								</div>
+							</div>
+							<div class="slider__item--small">
+									<div class="article">
+										<img src="./assets/images/magazine_3.png" alt="iceberg" class="article__image" />
+										<div class="article__content">
+											<span class="article__date">16.02.2023</span>
+											<h3 class="article__title">«Удивительный айсберг». В Алматинской области «снова появился «ледяной вулкан»</h3>
+											<p class="article__text">Казахстанцы делятся новыми красивыми фотографиями из села Кеген Алматинской области. Место славится...</p>
+										</div>
+									<a href="#" class="details details__link--black">Подробнее</a>
+								</div>
+							</div>
+						</div>
+						<!-- Кнопки навигации -->
+						<button class="slider__nav slider__nav--prev" type="button">
+							&lt;
+						</button>
+						<button class="slider__nav slider__nav--next" type="button">
+							&gt;
+						</button>
+					</div>
+				</div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
