Add instagrams, partners

--- a/index.html
+++ b/index.html
@@ -365,8 +365,181 @@
 					</div>
 				</div>
       </section>
-      <section></section>
-      <section></section>
+      <section class="section">
+				<div class="instagram">
+					<div class="instagram__heading">
+						<h1 class="instagram__header">Подписывайтесь на нас в Instagram</h1> 
+						<img src="./assets/icons/instagram.svg" alt="insta icon" class="instagram__icon">
+					</div>
+					<div class="instagram__explore">
+						<div class="instagram__item">
+							<div class="instagram__filter"></div>
+							<img src="./assets/images/insta_post_1.png" alt="" class="instagram__image">
+							<div class="instagram__item-content">
+								<div class="instagram__reaction">
+									<div class="instagram__likes">
+										<img src="./assets/icons/heart.svg" alt="like">
+										<span>248.1K</span>
+									</div>
+									<div class="instagram__comments">
+										<img src="./assets/icons/commentary.svg" alt="comment">
+										<span>3</span>
+									</div>
+								</div>
+								<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Пластиковая карта и онлайн карта действует 24 часа с момента первого посещения объекта. Предъявляйте смарт-карту или QR код на кассах объектов для свободного прохода.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте? 🪄</p>
+							</div>
+						</div>
+
+						<div class="instagram__item">
+								<div class="instagram__filter"></div>
+								<img src="./assets/images/insta_post_2.png" alt="" class="instagram__image">
+								<div class="instagram__item-content">
+									<div class="instagram__reaction">
+										<div class="instagram__likes">
+											<img src="./assets/icons/heart.svg" alt="like">
+											<span>248.1K</span>
+										</div>
+										<div class="instagram__comments">
+											<img src="./assets/icons/commentary.svg" alt="comment">
+											<span>3</span>
+										</div>
+									</div>
+										<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте?</p>
+								</div>
+							
+						</div>
+
+						<div class="instagram__item">
+							<div class="instagram__filter"></div>
+							<img src="./assets/images/insta_post_3.png" alt="" class="instagram__image">
+							<div class="instagram__item-content">
+								<div class="instagram__reaction">
+									<div class="instagram__likes">
+										<img src="./assets/icons/heart.svg" alt="like">
+										<span>248.1K</span>
+									</div>
+									<div class="instagram__comments">
+										<img src="./assets/icons/commentary.svg" alt="comment">
+										<span>3</span>
+									</div>
+								</div>
+									<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте?</p>
+							</div>
+						</div>
+
+						<div class="instagram__item">
+							<div class="instagram__filter"></div>
+							<img src="./assets/images/insta_post_4.png" alt="" class="instagram__image">
+							<div class="instagram__item-content">
+								<div class="instagram__reaction">
+									<div class="instagram__likes">
+										<img src="./assets/icons/heart.svg" alt="like">
+										<span>248.1K</span>
+									</div>
+									<div class="instagram__comments">
+										<img src="./assets/icons/commentary.svg" alt="comment">
+										<span>3</span>
+									</div>
+								</div>
+									<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте?</p>
+							</div>
+						</div>
+
+						<div class="instagram__item">
+							<div class="instagram__filter"></div>
+							<img src="./assets/images/insta_post_5.png" alt="" class="instagram__image">
+							<div class="instagram__item-content">
+								<div class="instagram__reaction">
+									<div class="instagram__likes">
+										<img src="./assets/icons/heart.svg" alt="like">
+										<span>248.1K</span>
+									</div>
+									<div class="instagram__comments">
+										<img src="./assets/icons/commentary.svg" alt="comment">
+										<span>3</span>
+									</div>
+								</div>
+									<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте?</p>
+							</div>
+						</div>
+
+						<div class="instagram__item">
+							<div class="instagram__filter"></div>
+							<img src="./assets/images/insta_post_6.png" alt="" class="instagram__image">
+							<div class="instagram__item-content">
+								<div class="instagram__reaction">
+									<div class="instagram__likes">
+										<img src="./assets/icons/heart.svg" alt="like">
+										<span>248.1K</span>
+									</div>
+									<div class="instagram__comments">
+										<img src="./assets/icons/commentary.svg" alt="comment">
+										<span>3</span>
+									</div>
+								</div>
+									<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте?</p>
+							</div>
+						</div>
+
+						<div class="instagram__item">
+							<div class="instagram__filter"></div>
+							<img src="./assets/images/insta_post_7.png" alt="" class="instagram__image">
+							<div class="instagram__item-content">
+								<div class="instagram__reaction">
+									<div class="instagram__likes">
+										<img src="./assets/icons/heart.svg" alt="like">
+										<span>248.1K</span>
+									</div>
+									<div class="instagram__comments">
+										<img src="./assets/icons/commentary.svg" alt="comment">
+										<span>3</span>
+									</div>
+								</div>
+									<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте?</p>
+							</div>
+						</div>
+
+						<div class="instagram__item">
+							<div class="instagram__filter"></div>
+							<img src="./assets/images/insta_post_8.png" alt="" class="instagram__image">
+							<div class="instagram__item-content">
+								<div class="instagram__reaction">
+									<div class="instagram__likes">
+										<img src="./assets/icons/heart.svg" alt="like">
+										<span>248.1K</span>
+									</div>
+									<div class="instagram__comments">
+										<img src="./assets/icons/commentary.svg" alt="comment">
+										<span>3</span>
+									</div>
+								</div>
+									<p class="instagram__description">Рады представить Вам новинку смарт карты - Museum Pass 🌟Museum Pass – это Ваша возможность свободного и комфортного входа во все культурные объекты столицы.Museum Pass позволяет создать удобный маршрут по изучению музеев города и сэкономить до 20% времени и средств в 2 раза.Дата запуска - 10 апреля 2023 года 😉А кого бы Вы позвали с собой в музей по нашей карте?</p>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</section>
+      <section class="section">
+				<div class="partners">
+					<div class="partners__container">
+						<h1 class="partners__heading">ПРИ ПОДДЕРЖКЕ</h1>
+						<div class="partners__icons">
+							<img src="./assets/images/partner_logo_1.png" alt="partner_1">
+							<img src="./assets/images/partner_logo_2.png" alt="partner_2">
+							<img src="./assets/images/partner_logo_3.png" alt="partner_3">
+						</div>
+					</div>
+					<div class="partners__container">
+						<h1 class="partners__heading">Партнеры</h1>
+						<div class="partners__icons">
+							<img src="./assets/images/partner_logo_4.png" alt="partner_4">
+							<img src="./assets/images/partner_logo_5.png" alt="partner_5">
+							<img src="./assets/images/partner_logo_6.png" alt="partner_6">
+						</div>
+					</div>
+				</div>
+			</section>
       <section></section>
     </main>
     <footer></footer>
