--- a/index.html
+++ b/index.html
@@ -365,6 +365,80 @@
 					</div>
 				</div>
       </section>
+			<section class="section">
+				<div class="faq ">
+					<h1 class="faq__heading">FAQ</h1>
+					<div class="faq__container">
+						<div class="accordion">
+							<div class="accordion__item">
+								<div class="accordion__header">
+									<div>
+										<img  src="./assets/icons/Artboard-Copy.svg" alt="">
+										<h1 class="accordion__heading">Как пользоваться картой Astana Citypass?</h1>
+									</div>
+									<img src="./assets/icons/arrow-down.svg" alt="open" class="accordion__arrow">
+								</div>
+								<div class="accordion__body ">
+									<div class="accordion__content-wrapper">
+										<div class="accordion__content">
+											<div class="accordion__point"></div>
+											<div class="accordion__text">Приобретите онлайн карту с QR кодом на сайте, либо пластиковую карту в пунктах продаж.</div>
+										</div>
+										<div class="accordion__content">
+											<div class="accordion__point"></div>
+											<div class="accordion__text">В течение срока действия карты (24 или 72 часа) вы сможете посетить все музеи, достопримечательности, экскурсии. Каждый объект бесплатно вы можете посетить только один раз.</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="accordion__item">
+								<div class="accordion__header">
+									<div>
+										<img  src="./assets/icons/Artboard-Copy.svg" alt="">
+										<h1 class="accordion__heading">Как пользоваться картой Astana Citypass?</h1>
+									</div>
+									<img src="./assets/icons/arrow-down.svg" alt="open" class="accordion__arrow">
+								</div>
+								<div class="accordion__body">
+									<div class="accordion__content-wrapper">
+										<div class="accordion__content">
+											<div class="accordion__point"></div>
+											<div class="accordion__text">Приобретите онлайн карту с QR кодом на сайте, либо пластиковую карту в пунктах продаж.</div>
+										</div>
+										<div class="accordion__content">
+											<div class="accordion__point"></div>
+											<div class="accordion__text">В течение срока действия карты (24 или 72 часа) вы сможете посетить все музеи, достопримечательности, экскурсии. Каждый объект бесплатно вы можете посетить только один раз.</div>
+									</div>
+
+									</div>
+								</div>
+							</div>
+							<div class="accordion__item">
+								<div class="accordion__header">
+									<div>
+										<img  src="./assets/icons/Artboard-Copy.svg" alt="">
+										<h1 class="accordion__heading">Как пользоваться картой Astana Citypass?</h1>
+									</div>
+									<img src="./assets/icons/arrow-down.svg" alt="open" class="accordion__arrow">
+								</div>
+								<div class="accordion__body">
+									<div class="accordion__content-wrapper">
+										<div class="accordion__content">
+											<div class="accordion__point"></div>
+											<div class="accordion__text">Приобретите онлайн карту с QR кодом на сайте, либо пластиковую карту в пунктах продаж.</div>
+										</div>
+										<div class="accordion__content">
+											<div class="accordion__point"></div>
+											<div class="accordion__text">В течение срока действия карты (24 или 72 часа) вы сможете посетить все музеи, достопримечательности, экскурсии. Каждый объект бесплатно вы можете посетить только один раз.</div>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
       <section class="section">
 				<div class="instagram">
 					<div class="instagram__heading">
