--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
               <button class="header__lang-option" data-lang="EN">ENG</button>
             </div>
           </div>
+		  <div class="burger-menu">
+			<span></span>
+			<span></span>
+			<span></span>
+		  </div>
         </div>
         <a href="#" class="buy buy__link--blue">
           <span>Купить</span>
@@ -70,20 +75,20 @@
       </div>
     </header>
     <main class="section section__main">
-      <section class="section slider--banner">
+      <section class="section ">
         <div class="slider">
           <div class="slider__track">
             <div class="slider__item">
               <img
                 class="slider__image"
-                src="./assets/images/main_slider_1.png"
+                src="./assets/images/main_slider_1.webp"
                 alt="Slider item"
               />
             </div>
             <div class="slider__item">
               <img
                 class="slider__image"
-                src="./assets/images/main_slider_2.jpg"
+                src="./assets/images/main_slider_2.webp"
                 alt="Slider item"
               />
               <div class="slider__content">
@@ -114,7 +119,7 @@
         <div class="pass__container">
           <div class="pass__item">
             <img
-              src="./assets/images/astana_pass.png"
+              src="./assets/images/astana_pass.webp"
               alt="astana pass"
               class="pass__image"
             />
@@ -145,7 +150,7 @@
           </div>
           <div class="pass__item">
             <img
-              src="./assets/images/museum_pass.png"
+              src="./assets/images/museum_pass.webp"
               alt="museum pass"
               class="pass__image"
             />
@@ -176,7 +181,7 @@
           </div>
           <div class="pass__item">
             <img
-              src="./assets/images/summer_pass.png"
+              src="./assets/images/summer_pass.webp"
               alt="summer pass"
               class="pass__image"
             />
@@ -265,7 +270,7 @@
             <div class="popular__action">
               <div class="popular__filter"></div>
               <img
-                src="./assets/images/popular_1.png"
+                src="./assets/images/popular_1.webp"
                 alt="red bus"
                 class="popular__image"
               />
@@ -286,7 +291,7 @@
             <div class="popular__action">
               <div class="popular__filter"></div>
               <img
-                src="./assets/images/popular_2.png"
+                src="./assets/images/popular_2.webp"
                 alt="Water Walk"
                 class="popular__image"
               />
@@ -305,7 +310,7 @@
             <div class="popular__action">
               <div class="popular__filter"></div>
               <img
-                src="./assets/images/popular_3.png"
+                src="./assets/images/popular_3.webp"
                 alt="nur-alem"
                 class="popular__image"
               />
@@ -326,7 +331,7 @@
             <div class="popular__action">
               <div class="popular__filter"></div>
               <img
-                src="./assets/images/popular_4.png"
+                src="./assets/images/popular_4.webp"
                 alt="jungle"
                 class="popular__image"
               />
@@ -359,7 +364,7 @@
               <div class="slider__item slider__item--small">
                 <div class="article">
                   <img
-                    src="./assets/images/magazine_1.png"
+                    src="./assets/images/magazine_1.webp"
                     alt="Dubai"
                     class="article__image"
                   />
@@ -381,7 +386,7 @@
               <div class="slider__item slider__item--small">
                 <div class="article">
                   <img
-                    src="./assets/images/magazine_2.png"
+                    src="./assets/images/magazine_2.webp"
                     alt="hospital place"
                     class="article__image"
                   />
@@ -401,7 +406,7 @@
               <div class="slider__item slider__item--small">
                 <div class="article">
                   <img
-                    src="./assets/images/magazine_3.png"
+                    src="./assets/images/magazine_3.webp"
                     alt="iceberg"
                     class="article__image"
                   />
@@ -422,7 +427,7 @@
               <div class="slider__item--small">
                 <div class="article">
                   <img
-                    src="./assets/images/magazine_3.png"
+                    src="./assets/images/magazine_3.webp"
                     alt="iceberg"
                     class="article__image"
                   />
@@ -581,7 +586,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_1.png"
+                src="./assets/images/insta_post_1.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -613,7 +618,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_2.png"
+                src="./assets/images/insta_post_2.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -643,7 +648,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_3.png"
+                src="./assets/images/insta_post_3.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -673,7 +678,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_4.png"
+                src="./assets/images/insta_post_4.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -703,7 +708,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_5.png"
+                src="./assets/images/insta_post_5.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -733,7 +738,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_6.png"
+                src="./assets/images/insta_post_6.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -763,7 +768,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_7.png"
+                src="./assets/images/insta_post_7.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -793,7 +798,7 @@
             <div class="instagram__item">
               <div class="instagram__filter"></div>
               <img
-                src="./assets/images/insta_post_8.png"
+                src="./assets/images/insta_post_8.webp"
                 alt=""
                 class="instagram__image"
               />
@@ -945,7 +950,7 @@
         </div>
       </div>
       <div class="footer__banner">
-        <img src="./assets/images/footer_image.png" alt="astana_pass" />
+        <img src="./assets/images/footer_image.webp" alt="astana_pass" />
       </div>
     </footer>
     <script src="./js/main.js"></script>
